--- a/app/views/home/_features.html.erb
+++ b/app/views/home/_features.html.erb
@@ -2,20 +2,16 @@
   <div class="Content">
     <div class="Features__heading">
       <h3>
-        Till is building a awesome suite of parental
-        money management and teaching tools
+        Till is building an app that helps families work better with money 
       </h3>
     </div>
     <div class="Features__items">
       <div class="Features__item">
         <img style="width: 128px;" src="<%= image_path('home/goals/wizard.svg') %>" />
         <div class="Features__item-copy">
-          <h4>A stress free financial management wizard</h4>
+          <h4>Build the expectations into the giving</h4>
           <p>
-            You'll be able to easily automate allowance, chores,
-            savings matching, and loan repayments in such a way
-            that your kids don't argue with you and they implicitly
-            learn the right financial instincts and values.
+            Easily attach requirements for earning, saving, and/or spending to every dollar a kid gets.  Follow-through and accountability are built in each time you give money.
           </p>
         </div>
       </div>
@@ -24,35 +20,25 @@
         <div class="Features__item-copy">
           <h4>Involve your whole community</h4>
           <p>
-            With our gift and sponsorship tools, friends and family
-            will be able to contribute to reading challenges, college
-            savings, that special thing your kids are saving for and
-            more - all while you retain control to ensure it’s according
-            to your parenting philosophy.
+            With our gift and sponsorship tools, friends and family will be able to contribute to college savings or that big special thing rather than unwanted disposables.   And, friends and family get to watch as their gifts add up to a meaningful impact on your kid’s life.
           </p>
         </div>
       </div>
       <div class="Features__item">
         <img style="width: 128px;" src="<%= image_path('home/goals/roadmap.svg') %>" />
         <div class="Features__item-copy">
-          <h4>A roadmap for all of childhood</h4>
+          <h4>A roadmap from birth to launch</h4>
           <p>
-            We'll share with you our research, tips and tricks from
-            other parents, and guide you every step of the way so
-            you can rest assured you've taught your kids everything
-            they need to know.
+            We'll share with you our research and insights from other parents.  Plus, guide you each step of the way so you can rest assured you've taught your kids everything they need to know.
           </p>
         </div>
       </div>
       <div class="Features__item">
         <img style="width: 128px;" src="<%= image_path('home/goals/money.svg') %>" />
         <div class="Features__item-copy">
-          <h4>Teach with real money</h4>
+          <h4>Real money, really safe</h4>
           <p>
-            We believe in learning by doing. All of our debit cards,
-            savings accounts, checking accounts and 529 accounts are
-            completely secure, backed by real banks and 100% FDIC
-            insured.
+            We believe in learning by doing. All of our debit cards, savings accounts, checking accounts, and 529 accounts are completely secure, backed by real banks and 100% FDIC insured.
           </p>
         <div />
       </div>
