--- a/app/views/home/_goals.html.erb
+++ b/app/views/home/_goals.html.erb
@@ -5,27 +5,27 @@
       alt="Placeholder"
     ></div>
     <div class="Goals__copy">
-      <h3>Let's make sure every child is financially savvy when they enter adulthood.</h3>
+      <h3>Let's make sure every child develops a healthy relationship with money</h3>
       <ul>
         <li class="Goals__list-item">
-          <div class="Goals__list-dot Dot"></div>
+          <div class="Goals__list-item-header">Patience</div>
           <div>
-            Understands the burden of college loan payments
-            and the value of compounding interests.
+            Wisely spending money, always looking to save, and before buying
+            things asking: "is this worth it.”
           </div>
         </li>
         <li class="Goals__list-item">
-          <div class="Goals__list-dot Dot"></div>
+          <div class="Goals__list-item-header">Reliability</div>
           <div>
-            Values money, doesn't overspend and saves whenever
-            possible
+            Taking agreements seriously, always sticking to their end of the
+            bargain, and holding others accountable
           </div>
         </li>
         <li class="Goals__list-item">
-          <div class="Goals__list-dot Dot"></div>
+          <div class="Goals__list-item-header">Planning</div>
           <div>
-            Is building up good credit scores and knows the
-            dangers of credit card fees and debt traps
+            Budgeting income and expenses, understanding the implications of
+            debt, and having an appropriately diversified portfolio 
           </div>
         </li>
       <ul>
