--- a/app/assets/stylesheets/home/features.scss
+++ b/app/assets/stylesheets/home/features.scss
@@ -61,7 +61,7 @@
 
     h4 {
       color: $tl-navy;
-      margin: 0;
+      margin: 20px 0 0 0;
       text-align: left;
       font-weight: 600;
 
