--- a/app/views/home/_goals.html.erb
+++ b/app/views/home/_goals.html.erb
@@ -1,9 +1,20 @@
 <section class="Goals parent">
   <div class="Content">
     <div
-      class="Goals__placeholder"
+      class="Goals__image-container"
       alt="Placeholder"
-    ></div>
+    >
+    <img
+      srcset="<%= image_path('home/goals.png') %> 425w,
+              <%= image_path('home/goals@2x.png') %> 850w,
+              <%= image_path('home/goals@3x.png') %> 1275w"
+      sizes="(max-width: 800px) 800px,
+             (max-width: 1024px) 1000px,
+             1024px"
+      src="<%= image_path('home/goals.png') %>"
+      alt="Till is a better way to give your kids money."
+     >
+    </div>
     <div class="Goals__copy">
       <h3>Let's make sure every child develops a healthy relationship with money</h3>
       <ul>
