updates; removed all links to other pages

--- a/app/assets/stylesheets/header/header_nav.scss
+++ b/app/assets/stylesheets/header/header_nav.scss
@@ -23,7 +23,7 @@
     @media (min-width: $desktop-width) {
       flex-direction: row;
       align-items: center;
-      justify-content: space-between;
+      justify-content: flex-end;
 
       min-width: 450px;
       height: inherit;
