--- a/app/views/home/_goals.html.erb
+++ b/app/views/home/_goals.html.erb
@@ -21,22 +21,22 @@
         <li class="Goals__list-item">
           <div class="Goals__list-item-header">Patience</div>
           <div>
-            Wisely spending money, always looking to save, and before buying
-            things asking: "is this worth it.”
+            Saves consistently, spends wisely and always asks
+            before buying, "is this worth it; do I really need it?”
           </div>
         </li>
         <li class="Goals__list-item">
-          <div class="Goals__list-item-header">Reliability</div>
+          <div class="Goals__list-item-header">Follow through.</div>
           <div>
-            Taking agreements seriously, always sticking to their end of the
-            bargain, and holding others accountable
+            Takes agreements seriously by always sticking to his or her end of the
+            bargain and holding others accountable
           </div>
         </li>
         <li class="Goals__list-item">
           <div class="Goals__list-item-header">Planning</div>
           <div>
-            Budgeting income and expenses, understanding the implications of
-            debt, and having an appropriately diversified portfolio 
+            Budgets earning and spending while understanding the implications of debt 
+            and the power of saving and investing          
           </div>
         </li>
       <ul>
