--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -3,7 +3,7 @@
     <h2>Sign up for our newsletter</h2>
     <p>
       Learn more about how to raise financially savvy kids and 
-      help us decide what features and functions come out first
+      help us decide what features come out first
     </p>
   </div>
   <div class="Newsletter__form-control FormControl">
