--- a/app/assets/stylesheets/form/button.scss
+++ b/app/assets/stylesheets/form/button.scss
@@ -5,7 +5,7 @@
   padding: 19px 30px;
   font-size: 16px;
   font-weight: 600;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
   background-color: $tl-orange;
   color: white;
   transition: .2s;
