--- a/app/views/footer/_social.html.erb
+++ b/app/views/footer/_social.html.erb
@@ -1,17 +1,17 @@
 <div class="Social">
   <ul>
     <li>
-      <a href="">
+      <a href="https://www.facebook.com/tillfinancial/" target="_blank">
         <img src="<%= image_path('social/facebook.svg') %>" alt="Facebook" />
       </a>
     </li>
     <li>
-      <a href="">
+      <a href="https://twitter.com/tillfinancial" target="_blank">
         <img src="<%= image_path('social/twitter.svg') %>" alt="Twitter" />
       </a>
     </li>
     <li>
-      <a href="">
+      <a href="https://instagram.com/tillfinancial" target="_blank">
         <img src="<%= image_path('social/instagram.svg') %>" alt="Instagram" />
       </a>
     </li>
