--- a/app/views/home/_features.html.erb
+++ b/app/views/home/_features.html.erb
@@ -9,9 +9,9 @@
       <div class="Features__item">
         <img style="width: 128px;" src="<%= image_path('home/goals/wizard.svg') %>" />
         <div class="Features__item-copy">
-          <h4>Build the expectations into the giving</h4>
+          <h4>Build expectations into the giving</h4>
           <p>
-            Easily attach requirements for earning, saving, and/or spending to every dollar a kid gets.  Follow-through and accountability are built in each time you give money.
+            Easily attach the requirements for earning, saving, and spending to every dollar a kid gets. Follow-through and accountability are built in each time you give money.
           </p>
         </div>
       </div>
@@ -20,7 +20,7 @@
         <div class="Features__item-copy">
           <h4>Involve your whole community</h4>
           <p>
-            With our gift and sponsorship tools, friends and family will be able to contribute to college savings or that big special thing rather than unwanted disposables.   And, friends and family get to watch as their gifts add up to a meaningful impact on your kid’s life.
+            Friends and family contribute to college savings or that special thing rather than unwanted disposables. And everyone get to watch as their gifts add up to a meaningful impact on your kid’s life.
           </p>
         </div>
       </div>
@@ -29,7 +29,7 @@
         <div class="Features__item-copy">
           <h4>A roadmap from birth to launch</h4>
           <p>
-            We'll share with you our research and insights from other parents.  Plus, guide you each step of the way so you can rest assured you've taught your kids everything they need to know.
+            We'll share with you our research plus insights from other parents. We guide you each step of the way so you can rest assured you've taught your kids everything they need to know.
           </p>
         </div>
       </div>
@@ -38,7 +38,7 @@
         <div class="Features__item-copy">
           <h4>Real money, really safe</h4>
           <p>
-            We believe in learning by doing. All of our debit cards, savings accounts, checking accounts, and 529 accounts are completely secure, backed by real banks and 100% FDIC insured.
+            We believe in learning by doing. All of our debit cards, savings/checking accounts, and 529s are completely secure; backed by a 100% FDIC-insured bank.
           </p>
         <div />
       </div>
