--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -33,6 +33,13 @@
     <% end %>
   </div>
   <div class="Success">
-    <p>Thanks! We'll be in touch soon.</p>
+    <p class="Success__headline">
+      Thanks! We'll be in touch soon.
+    </p>
+    <p>Share Till with your community.</p>
+    <div class="Success__social">
+      <img src="<%= image_path('social/white_facebook.svg') %>" alt="Facebook" />
+      <img src="<%= image_path('social/white_twitter.svg') %>" alt="Twitter" />
+    </div>
   </div>
 </section>
