FB javascript sdk loaded

--- a/app/views/home/_newsletter.html.erb
+++ b/app/views/home/_newsletter.html.erb
@@ -39,7 +39,9 @@
     <p>Share Till with your community.</p>
     <div class="Success__social">
       <img src="<%= image_path('social/white_facebook.svg') %>" alt="Facebook" />
-      <img src="<%= image_path('social/white_twitter.svg') %>" alt="Twitter" />
+      <a href="https://twitter.com/intent/tweet?text=Check out Till: a better way to give your kids money. https://www.tillfinancial.io&source=webclient">
+        <img src="<%= image_path('social/white_twitter.svg') %>" alt="Twitter" />
+      </a>
     </div>
   </div>
 </section>
