--- a/app/views/home/_tagline_container.html.erb
+++ b/app/views/home/_tagline_container.html.erb
@@ -4,7 +4,7 @@
       render(
         partial: 'shared/tagline',
         locals: {
-          body: 'A better way to give your kids money'
+          body: 'A better way to give<br/>your kids money'
         }
       )
     %>
