--- a/app/views/footer/_footer_nav.html.erb
+++ b/app/views/footer/_footer_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="FooterNav">
   <ul>
     <li>
-      <a href='/contact'>
+      <a href="mailto:hello@tillfinancial.io">
         Contact
       </a>
     </li>
