--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,34 @@
     <%= favicon_link_tag asset_path('till_favicon.png'), :rel => 'icon', :type =>  'image/png' %>
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,800" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+    <meta name="viewport"             content="width=device-width, initial-scale=1">
+    <meta property="og:url"           content="https://test.tillfinancial.io" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Till" />
+    <meta property="og:description"   content="A better way to give your kids money." />
   </head>
 
   <body>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId            : '167885590822992',
+          autoLogAppEvents : true,
+          xfbml            : true,
+          version          : 'v3.2'
+        });
+      };
+
+      (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <% if flash[:notice].present? || flash[:alert].present? %>
       <%= render partial: 'shared/flash_banner' %>
     <% end %>
