--- a/app/views/header/_logo.html.erb
+++ b/app/views/header/_logo.html.erb
@@ -1,3 +1,5 @@
 <div class="Logo">
-  <img src="<%= image_path('header/till-logo.svg') %>" alt="Till" />
+  <a href="/">
+    <img src="<%= image_path('header/till-logo.svg') %>" alt="Till" />
+  </a>
 </div>
