--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'hero' %>
 <%= render partial: 'lead_value_prop' %>
-<%= render partial: 'newsletter' %>
+<%= render partial: 'shared/newsletter' %>
 <%= render partial: 'goals' %>
 <%= render partial: 'features' %>
