--- a/app/views/header/_header_nav.html.erb
+++ b/app/views/header/_header_nav.html.erb
@@ -1,7 +1,13 @@
 <nav class="HeaderNav mobileHide">
   <ul>
-    <!-- <li><a href="#welcome">About</a></li> -->
-    <!-- <li><a href="#menu">Newsletters</a></li> -->
+    <li>
+      <a href="/about">About</a>
+    </li>
+    <li>
+      <a href="/newsletters">
+        Newsletters
+      </a>
+    </li>
     <li>
       <%= 
         render(
