--- a/app/views/header/_header_nav.html.erb
+++ b/app/views/header/_header_nav.html.erb
@@ -16,7 +16,8 @@
             value: 'Subscribe',
             type: 'button',
             input_id: 'subscribe-btn',
-            data_scroll: 'newsletter'
+            data_scroll: 'newsletter',
+            onclick: "onSubscribeClick()"
           }
         )
       %>
