--- a/app/views/shared/form/_button.html.erb
+++ b/app/views/shared/form/_button.html.erb
@@ -5,4 +5,5 @@
   type="<%= local_assigns[:type] || 'button' %>"
   value="<%= local_assigns[:value] || 'Submit' %>"
   data-scroll="<%= local_assigns[:data_scroll] %>"
+  onclick="<%= local_assigns[:onclick] %>"
 />
