--- a/app/views/header/_nav_items.html.erb
+++ b/app/views/header/_nav_items.html.erb
@@ -1,6 +1,6 @@
 <ul>
-  <li><a href="#welcome">About Us</a></li>
-  <li><a href="#menu">Newsletters</a></li>
+  <li><a href="/about">About Us</a></li>
+  <li><a href="/newsletters">Newsletters</a></li>
   <li>
     <%= 
       render(
