event listeners attach on each page

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -2,3 +2,5 @@
 <%= render partial: 'image' %>
 <%= render partial: 'values' %>
 <%= render partial: 'shared/newsletter' %>
+
+<%= javascript_include_tag 'home' %>
