--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,5 @@
 <%= render partial: 'shared/newsletter' %>
 <%= render partial: 'goals' %>
 <%= render partial: 'features' %>
+
+<%= javascript_include_tag 'home' %>
