--- a/app/views/shared/_newsletter.html.erb
+++ b/app/views/shared/_newsletter.html.erb
@@ -7,7 +7,7 @@
     </p>
   </div>
   <div class="Newsletter__form-control FormControl">
-    <%= form_tag leads_path, id: 'newsletter-form', data: { remote: true } do %>
+    <%= form_tag leads_path, id: 'newsletter-form' do %>
       <div class="Newsletter__text-input-container">
         <%=
           render(
