restore links in footer

--- a/app/views/footer/_footer_nav.html.erb
+++ b/app/views/footer/_footer_nav.html.erb
@@ -1,6 +1,16 @@
 <div class="FooterNav">
   <ul>
     <li>
+      <a href="/about">
+        About
+      </a>
+    </li>
+    <li>
+      <a href="/newsletters">
+        Newsletters
+      </a>
+    </li>
+    <li>
       <a href="mailto:hello@tillfinancial.io">
         Contact
       </a>
