--- a/app/views/footer/_terms.html.erb
+++ b/app/views/footer/_terms.html.erb
@@ -1,5 +1,5 @@
-<div class="Terms">
-  <p>Terms & Conditions</p>
-  <span class="Terms__dot Dot"></span>
-  <p>Privacy Policy</p>
+<div class="TermsFooter">
+  <a href="terms">Terms & Conditions</a>
+  <span class="TermsFooter__dot Dot"></span>
+  <a href="privacy">Privacy Policy</a>
 </div>
