--- a/app/assets/stylesheets/header/header.scss
+++ b/app/assets/stylesheets/header/header.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   overflow: hidden;
+  box-shadow: -10px 2px 14px 0 rgba(42, 45, 51, 0.14);
 
   position: relative;
 
