--- a/app/assets/stylesheets/posts/posts.scss
+++ b/app/assets/stylesheets/posts/posts.scss
@@ -1,18 +1,33 @@
 @import "./mixins/colors";
+@import "./mixins/breakpoints";
 
 .Posts {
+  display: flex;
+  justify-content: center;
   padding: 0 20px;
 
   .Content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+
+    @media (min-width: $desktop-width) {
+      flex-direction: row;
+      align-items: flex-start;
+    }
   }
 
   &__main {
-    margin-right: 100px;
+    @media (min-width: $desktop-width) {
+      margin-right: 100px;
+    }
   }
 
   &__other {
-    
+    margin-bottom: 50px;
+
+    h3 {
+      font-weight: 400;
+    }
   }
 }
