--- a/app/views/buttercms/posts/index.html.erb
+++ b/app/views/buttercms/posts/index.html.erb
@@ -1,16 +1,33 @@
 <div class="PostsHeader">
   <h1>Latest Newsletter</h1>
-  <h3>Week of October 14, 2018</h3>
+  <h3>Week of <%= DateTime.parse(@featured.published).strftime('%B %-d, %Y') %></h3>
 </div>
 
 <div class="Posts">
   <div class="Content">
     <main class="Posts__main">
-      <%= @posts.first.body.html_safe %>
+      <%= @featured.body.html_safe %>
     </main>
     <div class="Posts__other">
       <h3>More Newsletters</h3>
-      <div style="width: 315px; height: 200px; background-color: black"></div>
+      <ul>
+        <% @posts.each do |post| %>
+        <li class="PostCard">
+          <a class="PostCard__link" href="/newsletters/<%= post.slug %>">
+            <div class="PostCard__content">
+              <img
+                class="PostCard__image"
+                src="<%= post.featured_image %>"
+              />
+              <div class="PostCard__meta">
+                <h5><%= post.title %></h5>
+                <span><%= DateTime.parse(post.published).strftime('%B %-d, %Y') %></span>
+              </div>
+            </div>
+          </a>
+        </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
