finish card styles; ensure raleway is used

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -7,11 +7,11 @@ body {
 
 h1, h2, h3, h4, p {
   color: $tl-dark-grey;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif !important;
 }
 
 h1, h2, h3, h4, p, a, li {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif !important;
 }
 
 h3 { font-size: 25px; }
