--- a/app/assets/stylesheets/posts/posts.scss
+++ b/app/assets/stylesheets/posts/posts.scss
@@ -5,6 +5,10 @@
   display: flex;
   justify-content: center;
 
+  img {
+    width: 100%;
+  }
+
   @media (min-width: $desktop-width) {
     padding: 0 20px;
   }
