--- a/app/views/buttercms/posts/_post.html.erb
+++ b/app/views/buttercms/posts/_post.html.erb
@@ -1,18 +1,27 @@
-<div>
-  <!-- Featured image -->
-  <%= image_tag(post.featured_image) if post.featured_image %>
-
-  <!-- Post title -->
-  <h4><%= link_to post.title, buttercms_post_path(post.slug), :title => post.title %></h4>
-
-  <!-- Post author -->
-  by <%= link_to "#{post.author.first_name} #{post.author.last_name}", buttercms_author_path(post.author.slug) %>
-
-  <!-- Post summary -->
-  <p><%= post.summary %></p>
-
-  <!-- Post categories -->
-  <% post.categories.each do |category| %>
-    <%= link_to category.name, buttercms_category_path(category.slug), :title => category.name %>
-  <% end %>
+<div class="Posts">
+  <div class="Content">
+    <main class="Posts__main">
+      <div>
+        <%= featured.body.html_safe %>
+      </div>
+    </main>
+    <div class="Posts__other">
+      <h3>More Newsletters</h3>
+      <ul>
+        <% posts.each do |post| %>
+          <%=
+            render(
+              partial: 'post_card',
+              locals: {
+                slug: post.slug,
+                image: post.featured_image,
+                title: post.title,
+                date: DateTime.parse(post.published).strftime('%B %-d, %Y')
+              }
+            )
+          %>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 </div>
