--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,6 +1,8 @@
-<%= render partial: 'header' %>
-<%= render partial: 'image' %>
-<%= render partial: 'values' %>
-<%= render partial: 'shared/newsletter' %>
+<div class="About" style="display: flex; flex-direction: column; align-items: center;">
+  <%= render partial: 'header' %>
+  <%= render partial: 'image' %>
+  <%= render partial: 'values' %>
+  <%= render partial: 'shared/newsletter' %>
+</div>
 
 <%= javascript_include_tag 'home' %>
