--- a/app/assets/stylesheets/about/about_values.scss
+++ b/app/assets/stylesheets/about/about_values.scss
@@ -2,6 +2,10 @@
 @import "./mixins/breakpoints";
 
 .AboutValues {
+  display: flex;
+  justify-content: center;
+
+  width: 100%;
   padding: 20px;
 
   .Content {
