--- a/app/assets/stylesheets/header/header_nav.scss
+++ b/app/assets/stylesheets/header/header_nav.scss
@@ -14,6 +14,18 @@
     width: inherit;
   }
 
+  &__link {
+    color: $tl-dark-grey;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 2px 5px;
+
+    &--active {
+      border-bottom: 2px solid $tl-turqoise;
+    }
+  }
+
   ul {
     display: flex;
     flex-direction: column;
@@ -31,17 +43,9 @@
     }
 
     li {
-
       @media (min-width: $desktop-width) {
         float: left;
         padding-left: 45px;
-      }
-
-      a {
-        color: $tl-navy;
-        text-decoration: none;
-        font-weight: 600;
-        font-size: 18px;
       }
     }
   }
