--- a/app/views/shared/_newsletter.html.erb
+++ b/app/views/shared/_newsletter.html.erb
@@ -39,8 +39,10 @@
       </p>
       <p>Share Till with your community.</p>
       <div class="Success__social">
-        <img src="<%= image_path('social/white_facebook.svg') %>" alt="Facebook" />
-        <a href="https://twitter.com/intent/tweet?text=Check out Till: a better way to give your kids money. https://www.tillfinancial.io&source=webclient">
+        <div id="fb-button">
+          <img src="<%= image_path('social/white_facebook.svg') %>" alt="Facebook" />
+        </div>
+        <a target="_blank" href="https://twitter.com/intent/tweet?text=Check out Till: a better way to give your kids money. https://www.tillfinancial.io&source=webclient">
           <img src="<%= image_path('social/white_twitter.svg') %>" alt="Twitter" />
         </a>
       </div>
