optimize other images

--- a/app/views/about/_image.html.erb
+++ b/app/views/about/_image.html.erb
@@ -1,11 +1,7 @@
 <div class="Content">
-  <img
-    style="width: 100%;"
-    srcset="<%= image_path('about/about-images.png') %> 1278w,
-            <%= image_path('about/about-images@2x.png') %> 2556w"
-    sizes="(max-width: 800px) 800px,
-            1024px"
-    src="<%= image_path('about/about-images.png') %>"
-    alt="Till is a better way to give your kids money."
-  >
+  <picture>
+    <source media="(max-width: 830px)" srcset="<%= image_path('about/ABOUT_Photos_Large.png') %>">
+    <source media="(min-width: 831px)" srcset="<%= image_path('about/ABOUT_Photos_Large.png') %>, <%= image_path('about/ABOUT_Photos_Large.png') %> 2x, <%= image_path('about/ABOUT_Photos_Large.png') %> 3x">
+    <img src="<%= image_path('about/ABOUT_Photos_Large.png') %>" width="100%" alt="Dad with kids on the left, teenage girl on the right">
+  </picture>
 </div>
