--- a/app/assets/stylesheets/header/header_nav.scss
+++ b/app/assets/stylesheets/header/header_nav.scss
@@ -4,9 +4,10 @@
 .HeaderNav {
   position: absolute;
   left: 0;
-  top: 100%;
+  top: 30%;
   width: 100%;
   margin-top: 15px;
+  transition: .2s;
 
   @media (min-width: $desktop-width) {
     position: relative;
