--- a/app/views/footer/_social.html.erb
+++ b/app/views/footer/_social.html.erb
@@ -15,5 +15,10 @@
         <img src="<%= image_path('social/instagram.svg') %>" alt="Instagram" />
       </a>
     </li>
+    <li>
+      <a href="https://www.linkedin.com/company/tillfinancial/" target="_blank">
+        <img src="<%= image_path('social/linkedin.svg') %>" alt="LinkedIn" />
+      </a>
+    </li>
   </ul>
 </div>
