--- a/app/assets/stylesheets/posts/post_card.scss
+++ b/app/assets/stylesheets/posts/post_card.scss
@@ -27,7 +27,7 @@
 
   &__meta {
     padding: 10px;
-    border: solid 2px #f7f2ef;
+    border: solid 2px $tl-pink;
     border-top: 0;
     border-radius: 0 0 10px 10px;
 
