--- a/app/assets/stylesheets/tagline/tagline.scss
+++ b/app/assets/stylesheets/tagline/tagline.scss
@@ -15,7 +15,7 @@
     font-family: 'Raleway', sans-serif;
     font-size: 28px;
     font-weight: 800;
-    color: white;
+    color: $tl-pink;
     text-align: center;
 
     @media (min-width: $desktop-width) {
